# video-downloader

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  compose.yml  dev-backend.sh  dev-frontend.sh  portainer-stack.yml
.claude/skills/backend-check/: SKILL.md
.github/workflows/: docker.yml
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: downloads.py  health.py  version.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/services/downloader/: __init__.py  formats.py  progress.py  service.py  url.py
backend/app/services/job_manager/: __init__.py  job.py  manager.py  status.py
backend/tests/: test_downloader_validation.py  test_health.py  test_job_manager.py  test_progress_hook.py  test_routes_downloads.py  test_url_canonicalize.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/scripts/: gen-icons.mjs
frontend/src/: App.tsx  api.ts  index.css  share-prep.ts  share-stager.worker.ts  useDownload.ts
