[project]
name = "video-downloader-backend"
version = "0.1.0"
description = "Self-hosted video downloader backend using FastAPI and yt-dlp"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "yt-dlp>=2024.10.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "ty>=0.0.1a5",
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
